# Ball-In-Maze-M5Stack

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  accelerometer.c  buttons.c  buttons.h  common.h  display.c  display.h  main.c  maze_generated.h  motion.c  motion.h  mpu9250.c  mpu9250.h
scripts/: generate_maze  generate_maze.py
