idf_component_register(
    SRCS 
        "main.c"
        "buttons.c"
        "mpu9250.c"
        "display.c"
        "./ESP32_TFT_library/components/tft/tft.c"
        "./ESP32_TFT_library/components/tft/tftspi.c"
        "./ESP32_TFT_library/components/tft/SmallFont.c"
        "./ESP32_TFT_library/components/tft/tooney32.c"
        "./ESP32_TFT_library/components/tft/DefaultFont.c"
        "./ESP32_TFT_library/components/tft/def_small.c"
        "./ESP32_TFT_library/components/tft/minya24.c"
        "./ESP32_TFT_library/components/tft/comic24.c"
        "./ESP32_TFT_library/components/tft/Ubuntu16.c"
        "./ESP32_TFT_library/components/tft/DejaVuSans18.c"
        "./ESP32_TFT_library/components/tft/DejaVuSans24.c"
        "./ESP32_TFT_library/components/spidriver/spi_master_lobo.c"
    INCLUDE_DIRS
        "."
        "./ESP32_TFT_library/components/tft/"
        "./ESP32_TFT_library/components/spidriver/"
        "./Fusion/Fusion/"
)
